app no longer broken on iphone 6/7/8 plus

--- a/src/App.sass
+++ b/src/App.sass
@@ -251,7 +251,7 @@ html
         padding: 0rem
 
 
-@media only screen and (max-width: 375px)
+@media only screen and (max-width: 420px)
 
     html
 
